--- a/app/assets/stylesheets/components/_chat.scss
+++ b/app/assets/stylesheets/components/_chat.scss
@@ -1,18 +1,20 @@
 body {
   font-family: Helvetica;
 }
+
 .app {
   display: flex;
+  height: 100px;
   // margin-top: 20px;
   // margin-bottom: 20px;
-
 }
 
 .channel-list {
   width: 20%;
   background-color: #F4F4F4;
-  height: 100vh;
+  height: 601px;
   padding: 10px 0 0 20px;
+  border-right: 1px solid #A3A9B3;
 
   .active-channel {
     font-weight: bolder;
@@ -32,7 +34,7 @@ body {
 .message-list {
   padding: 10px 20px 0 20px;
   width: 80%;
-  height:100vh;
+  // height:100 vh;
   // max-height: 90vh;
 
   .channel-name {
@@ -42,8 +44,8 @@ body {
   .messages {
     display: inline-block;
     width: 100%;
-    height: 515px;
-    max-height: 515px;
+    height: 450px;
+    max-height: 450px;
     overflow: auto;
   }
 
