change alert color and created container for devise pages

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,8 @@
 // Specific CSS for your home-page
+a {
+  color: #7F7F7F;
+  text-decoration: none;
+}:hover {
+  text-decoration: none !important;
+  color: black !important;
+}
